<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_onboarding"
    android:orientation="vertical"
    tools:context=".features.sinUp.view.SinUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normalMargin"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/NormalTextViewStyle"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:padding="0dp"
                android:text="@string/register_new_account"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeVeryLarge" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_white_logo" />

        <TextView
            style="@style/NormalTextViewStyle"
            android:fontFamily="@font/roboto_regular"
            android:padding="0dp"
            android:text="@string/your_full_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_user_name"
            style="@style/TextInputEditTextStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:drawableStart="@drawable/ic_user_profile"
            android:drawablePadding="@dimen/dim_12_padding"
            android:hint="@string/enter_your_full_name_here"
            android:imeOptions="actionNext"
            android:inputType="text" />


        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_marginTop="@dimen/normalMargin"
            android:fontFamily="@font/roboto_regular"
            android:padding="0dp"
            android:text="@string/email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_email"
            style="@style/TextInputEditTextStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/dim_12_padding"
            android:hint="@string/enter_your_email_here"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_marginTop="@dimen/normalMargin"
            android:fontFamily="@font/roboto_regular"
            android:padding="0dp"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_password"
            style="@style/TextInputEditTextStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:drawableStart="@drawable/ic_pasword"
            android:drawablePadding="@dimen/dim_12_padding"
            android:hint="@string/enter_your_password_here"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_marginTop="@dimen/normalMargin"
            android:fontFamily="@font/roboto_regular"
            android:padding="0dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_confirm_password"
            style="@style/TextInputEditTextStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:drawableStart="@drawable/ic_pasword"
            android:drawablePadding="@dimen/dim_12_padding"
            android:hint="@string/re_typ_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/normalMargin"
            android:layout_marginBottom="@dimen/extraExtraMargin"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/BlueButtonStyle"
                android:layout_marginStart="@dimen/extraExtraMargin"
                android:layout_marginEnd="@dimen/extraExtraMargin"
                android:text="@string/register_account" />

            <LinearLayout
                android:id="@+id/ll_have_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/NormalTextViewStyle"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    style="@style/NormalTextViewStyle"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/log_in_here"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>