<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_onboarding"
    android:orientation="vertical"
    tools:context=".features.addCreditCard.view.AddCreditCardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extraExtraMargin"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/smallMargin"
                android:background="@null"
                app:srcCompat="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TitleTextViewStyle"
                android:layout_centerInParent="true"
                android:text="@string/add_credit_card"
                android:textColor="@color/black" />


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:orientation="vertical">

        <TextView
            style="@style/TitleTextViewStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/card_information"
            android:textColor="@color/black" />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginBtnView"
            android:layout_marginBottom="@dimen/marginBtnView"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/smallMargin">

                <TextView
                    android:id="@+id/tv_visa"
                    style="@style/NormalTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/custom_card_type_white"
                    android:gravity="center"
                    android:padding="@dimen/smallMargin"
                    android:paddingStart="@dimen/normalMargin"
                    android:paddingEnd="@dimen/normalMargin"
                    android:text="@string/visa_card"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_master"
                    style="@style/NormalTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/custom_card_type_selected"
                    android:gravity="center"
                    android:padding="@dimen/smallMargin"
                    android:paddingStart="@dimen/normalMargin"
                    android:paddingEnd="@dimen/normalMargin"
                    android:text="@string/master_card"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/normalMargin"
            android:fontFamily="@font/roboto_regular"
            android:padding="0dp"
            android:text="@string/card_number"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_card_number"
            style="@style/TextInputEditTextStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:hint="@string/card_number_hint"
            android:maxLength="16"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            style="@style/NormalTextViewStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/normalMargin"
            android:fontFamily="@font/roboto_regular"
            android:padding="0dp"
            android:text="@string/card_holder_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_card_holder_name"
            style="@style/TextInputEditTextStyle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:hint="@string/your_name_here"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/normalMargin"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                style="@style/NormalTextViewStyle"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/normalMargin"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:padding="0dp"
                android:text="@string/CCV"
                android:textAlignment="textStart"
                android:textColor="@color/black" />

            <TextView
                style="@style/NormalTextViewStyle"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/normalMargin"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:padding="0dp"
                android:text="@string/expired_date"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/normalMargin"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/ed_ccv"
                style="@style/TextInputEditTextStyle"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/ccv_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/ed_expired_date"
                style="@style/TextInputEditTextStyle"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_weight="1"
                android:hint="@string/expired_date_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:textAlignment="textStart" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_card"
            style="@style/BlueButtonStyle"
            android:layout_marginStart="@dimen/extraExtraMargin"
            android:layout_marginTop="@dimen/extraExtraMargin"
            android:layout_marginEnd="@dimen/extraExtraMargin"
            android:padding="@dimen/paddingSmall"
            android:text="@string/add_card" />


    </LinearLayout>
</LinearLayout>